--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -14,13 +14,55 @@ html, body {
     align-items: center;
     text-align: center;
     position: relative;
+    overflow-x: hidden;
 }
-.header-info{
 
+.header::before{
+    content: "";
+    display: flex;
     width: 100%;
-    height: 50%;
+    height: 100%;
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from( rgba(27, 3, 241, 0.28)),
+        to(rgb(187, 10, 10, 0.28))), 
+        url("../img/background.jpg");
+    background-size: cover;
+    filter: blur(2px);
+    
+}
+
+.header-info{  /*letras*/
+
+    position: absolute;
+    font-size: 25px;
+    color: white;
+    text-shadow: 10px 3px 25px rgb(252, 3, 3);
 }
 
 .btn{
+border: 2px solid #9b0000;
+width: 10em;
+height: 2.4em;
+font-family: 'Space Grotesk', sans-serif;
+color: transparent;
+cursor: pointer;
+border-radius: 8px;
+background-color: transparent;
+font-size: 16px;
+transition-property: border, background-color;
+transition-duration:  150ms;
+text-shadow: 20px 3px 25px rgb(3, 7, 252);
+}
 
+.btn:hover{
+    border-width: 4px;
+    background-color: transparent;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
