--- a/CadastroMedico/src/app/home/home.component.html
+++ b/CadastroMedico/src/app/home/home.component.html
@@ -32,24 +32,24 @@
 
   <carousel>
     <slide>
-      <img src="https://www.hospitalmarcelino.com.br/wp-content/uploads/2019/08/dia-combate-colesterol-cardiologia.jpg" alt="first slide" style="display: block; width: 100%;">
+      <img src="https://cursinhoparamedicina.com.br/wp-content/uploads/2020/08/grandes-medicos-humanidade.jpg" alt="first slide" style="display: block; width: 100%;">
       <div class="carousel-caption d-none d-md-block">
-        <h3>First slide label</h3>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <!--<h3>First slide label</h3>
+        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
       </div>
     </slide>
     <slide>
       <img src="https://clinicapopmed.com.br/wp-content/uploads/2019/07/cardiologia-1170x627.png" alt="second slide" style="display: block; width: 100%;">
       <div class="carousel-caption d-none d-md-block">
-        <h3>Second slide label</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <!--<h3>Second slide label</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
       </div>
     </slide>
     <slide>
       <img src="https://www.clinicaviveraltamira.com.br/upload/service/TB9fC7sLitboWUhiOVkoc3mGTWcO4k2zoPKC3eD3.jpeg" alt="third slide" style="display: block; width: 100%;">
       <div class="carousel-caption d-none d-md-block">
-        <h3>Third slide label</h3>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <!--<h3>Third slide label</h3>
+        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
       </div>
     </slide>
   </carousel>
